<resources>
    <string name="app_name">BicoccaHelp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginFragment">Login Fragment</string>
    <string name="forgotPasswordFragment">Forgot password Fragment</string>
    <string name="registrationFragment">Registration Fragment</string>
    <string name="mainActivity">Main Activity</string>
    <string name="reset_password_title">Reset \npassword</string>
    <string name="email">Email</string>
    <string name="send_email_text">We have just send email verification link on your email. Please check
        email and clickon that link to verify your email address.\n\n If not auto redirected after
        verification, click on the continue button</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="send_email">Send Email</string>
    <string name="login_title">Hi, \nPlease login</string>
    <string name="insert_your_password">Insert your password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_account_title">Create \nAccount</string>
    <string name="password">Password</string>
    <string name="repeate_password">Repeate Password</string>
    <string name="name">Name</string>
    <string name="insert_your_name">Insert your name</string>
    <string name="sign_up">Sign up</string>
    <string name="verify_email_title">Email \nVerification</string>
    <string name="verifyEmailFragment">Verify Email Fragment</string>
    <string name="title_activity_verify_email">VerifyEmailActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="verifyEmailActivity">Verify Email Activity</string>
    <string name="delete_profile">Delete Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="history">History</string>
    <string name="review">Review</string>
    <string name="profile_title">Profile</string>
    <string name="profileFragment">Profile Fragment</string>
    <string name="welcomeActivity">Welcome Activity</string>
    <string name="dialog_delete">Delete Account Dialog</string>
    <string name="update_password">Update Password Dialog</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_update_password">Update password dialog</string>
    <string name="update_password_title">Update Password</string>
    <string name="insert_old_password">Insert old password</string>
    <string name="insert_new_password">Insert new password</string>
    <string name="update_name_title">Update Name</string>
    <string name="dialog_update_name">Update name Dialog</string>
    <string name="dialog_log_out">Log Out Dialog</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="home_fragment">Fragment Home</string>
    <string name="delete_account_error">We\'re Sorry, Account Deletion Error</string>
    <string name="reauth_error">Unable to Re-authenticate</string>
    <string name="load_photo_error">Unable to Upload Photo</string>
    <string name="https">https</string>
    <string name="invalid_name"> Invalid Name Entered</string>
    <string name="name_update_error">Error: Name Not Updated</string>
    <string name="old_password">Please enter your old password</string>
    <string name="different_password">The password must be different from the old one</string>
    <string name="invalid_password">Invalid Password Entered</string>
    <string name="password_update_error">Error: Password Not Updated</string>
    <string name="email_not_send">Failed to send email. Please try again later</string>
    <string name="invalid_email">Invalid Email Entered</string>
    <string name="switch_loaders_json">switch_loaders.json</string>
    <string name="login_fail">Login failed. Please check your credentials and try again</string>
    <string name="invalid_email_and_password">Invalid credentials. Please double-check your username and password</string>
    <string name="create_account_fail">Account not created. Please verify your information and try again</string>
    <string name="set_name">Name not set. Please provide your name to proceed</string>
    <string name="repeate_password_fail">The passwords don\'t match</string>
    <string name="email_verified">The email has already been verified</string>
    <string name="verify_email_sent">The email has been sent</string>
    <string name="user_not_verified">Before proceeding, please authenticate</string>
    <string name="email_not_verified">Before proceeding, please verify you email</string>
    <string name="become_a_tutor">Join as a Tutor</string>
    <string name="complete_student">Complete Student Profile</string>
    <string name="details_title">Your\nDetails</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_student">Create Student</string>
    <string name="complete_student_fragment">Fragment complete Student</string>
    <string name="study_program">Insert your study program</string>
    <string name="corso">Study Program</string>
    <string name="create_student_profile">Create Student Profile</string>
    <string name="masters_degree">Master\'s degree</string>
    <string name="tutor_radioButton">Please indicate your interest in becoming a tutor by making a selection. A choice is mandatory.</string>
    <string name="insert_a_valid_studyProgram">Invalid Study Program Entered</string>
    <string name="magistrale">Magistrale</string>
    <string name="triennale">Triennale</string>
    <string name="generic_error">Generic Error</string>
    <string name="update_student">Update Student Profile</string>
    <string name="complete_tutor_fragment">Fragment Complete Tutor</string>
    <string name="back">Back to profile</string>
    <string name="subject">Input your top skills</string>
    <string name="insert_skill">Please enter a skill</string>
    <string name="disponibility_error">Please insert at least one day to proceed</string>
    <string name="class_booking">Book a\nClass</string>
    <string name="tutor_fragment">Fragment Tutor</string>
    <string name="select_disponibilities">Select your availability</string>
    <string name="monday">Monday</string>
    <string name="friday">Friday</string>
    <string name="tuesday">Tuesday</string>
    <string name="saturday">Saturday</string>
    <string name="wednesday">Wednesday</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="best_skill">Indicate your key competencies</string>
    <string name="add">Add</string>
    <string name="create_tutor">Create Tutor Profile</string>
    <string name="add_subject">Subject successfully added!</string>
    <string name="add_at_least_a_skill">Complete the student profile before proceeding</string>
    <string name="search">Search</string>
    <string name="find_tutor">Find your tutor by name</string>
    <string name="filter">Filter</string>
    <string name="db_error">Firestore Database Error</string>
    <string name="search_field">Search field</string>
    <string name="study_program_toggle">Study Program</string>
    <string name="disponibility">Disponibilty</string>
    <string name="skill">Skill</string>
    <string name="email_check">Email should be</string>
    <string name="email_domain">\@campus.unimib.it domain</string>
    <string name="password_check">Password should be</string>
    <string name="check_char">At least 8 characters</string>
    <string name="check_number">Minimum one number</string>
    <string name="check_special_char">Minimum one special characters</string>
    <string name="check_uppercase">Minimum one uppercase</string>
    <string name="name_check">Name should be</string>
    <string name="check_char_name">At least 3 characters</string>
    <string name="check_numb_name">No numbers</string>
    <string name="check_name_special_char">No special characters</string>
    <string name="BookLessonFragment">Book Lesson Fragment</string>
    <string name="review_fragment">Fragment review</string>
    <string name="tutor_to_review">Enter a valid tutor</string>
    <string name="auto_review">You can\'t review yourself</string>
    <string name="already_review">You have already submitted a review</string>
    <string name="review_submit">Review successfully submitted!</string>
</resources>