<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:layout_width="wrap_content"
        android:enabled="true"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home_task_bar"/>
    <item
        android:id="@+id/explore_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:title="@string/explore"
        android:icon="@drawable/explore_task_bar" />
    <item
        android:id="@+id/profile_fragment"
        android:layout_width="wrap_content"
        android:enabled="true"
        android:layout_height="wrap_content"
        android:icon="@drawable/account_task_bar"
        android:title="@string/profile_title" />
</menu>