<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_navigation_graph"
    app:startDestination="@id/fragment_login">




    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.bicoccahelp.ui.welcome.LoginFragment"
        android:label="@string/loginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_from_login_to_forgot_password"
            app:destination="@id/fragment_forgot_password" />

        <action
            android:id="@+id/action_from_login_to_registration"
            app:destination="@id/fragment_registration"/>

    </fragment>

    <fragment
        android:id="@+id/fragment_forgot_password"
        android:name="com.example.bicoccahelp.ui.welcome.ForgotPasswordFragment"
        android:label="@string/forgotPasswordFragment"
        tools:layout="@layout/fragment_forgot_password">

    </fragment>

    <fragment
        android:id="@+id/fragment_registration"
        android:name="com.example.bicoccahelp.ui.welcome.RegistrationFragment"
        android:label="@string/registrationFragment"
        tools:layout="@layout/fragment_registration">

    </fragment>

</navigation>