<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/profile_fragment">


    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.example.bicoccahelp.ui.profile.ProfileFragment"
        android:label="@string/profileFragment"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_from_profile_to_welcome_activity"
            app:destination="@id/activity_welcome"/>

        <action
            android:id="@+id/action_from_profile_to_delete_dialog"
            app:destination="@id/delete_dialog"/>
    </fragment>

    <activity
        android:id="@+id/activity_welcome"
        android:name="com.example.bicoccahelp.ui.welcome.WelcomeActivity"
        android:label="@string/welcomeActivity"
        tools:layout="@layout/activity_welcome">
    </activity>

    <dialog
        android:id="@+id/delete_dialog"
        android:name="com.example.bicoccahelp.ui.profile.DeleteUserDialogFragment"
        android:label="@string/dialog_delete"
        tools:layout="@layout/fragment_delete_user_dialog">

        <action
            android:id="@+id/action_from_delete_dialog_to_welcome_activity"
            app:destination="@id/activity_welcome"/>


    </dialog>

</navigation>