<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.profile.CompleteStudentProfileFragment"
    android:id="@+id/fragment_complete_student">

    <ImageView
        android:id="@+id/complete_student_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/wave_haikei_4_"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/complete_student_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/details_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="1255dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complete_student_background"
        app:layout_constraintVertical_bias="0.632">

        <LinearLayout
            android:id="@+id/profile_setting_linearLayout"
            android:background="@drawable/round_back_background_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <TextView

                android:id="@+id/insert_corso_di_studi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/study_program"
                android:textColor="@color/dark_gray"
                android:textSize="23sp"
                />


            <!-- Name -->
            <RelativeLayout
                android:id="@+id/update_name_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingHorizontal="15dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/create_student_TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/graduation"
                    app:errorTextAppearance="@font/lato_bold"
                    android:textColor="@color/dark_gray"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_student_editText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:background="@drawable/completeprofile_edittext_background"
                        android:hint="@string/corso"
                        android:fontFamily="@font/lato"
                        android:padding="12dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/dark_gray"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>



            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/checkbox_item"
                android:layout_width="match_parent"
                android:paddingHorizontal="15dp"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/create_student_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masters_degree"
                    android:button= "@null"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/image_checbox"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/dark_gray"
                    android:textSize="17sp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/join_as_a_tutor_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/become_a_tutor"
                android:textColor="@color/dark_gray"
                android:textSize="23sp"
                />

            <RelativeLayout
                android:id="@+id/radio_group_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingHorizontal="15dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/yes_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:background="@drawable/radio_button_background"
                        android:button="@drawable/null_radio_button"
                        android:paddingHorizontal="14dp"
                        android:textSize="15sp"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_text_selected"
                        android:text="@string/yes"/>

                    <RadioButton
                        android:id="@+id/no_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textSize="15sp"
                        android:paddingHorizontal="16dp"
                        android:layout_marginHorizontal="8dp"
                        android:button="@drawable/null_radio_button"
                        android:background="@drawable/radio_button_background"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@drawable/radio_text_selected"
                        />

                </RadioGroup>

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_student_button"
                style="@android:style/Widget.Button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/create_student_profile"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>